# pinata

./: .gitignore  .pre-commit-config.yaml  README.md  evaluation.py  pyproject.toml  run.py  test_case.json
benchmark/: classifieds_failing.csv  classifieds_passing.csv  onestopshop_failing.csv  onestopshop_passing.csv  postmill_failing.csv  postmill_passing.csv
data/: OneStop_Passing.csv
js/: element_to_html_string.js  mark_page.js
src/VTAAS/data/: testcase.py
src/VTAAS/llm/: anthropic_client.py  google_client.py  llm_client.py  mistral_client.py  openai_client.py  openrouter_client.py  utils.py
src/VTAAS/orchestrator/: __init__.py  followup_prompt.txt  followup_prompt_prompt.txt  init_prompt.txt  init_prompt_prompt.txt  orchestrator.py  recover_prompt.txt  synthesis_prompt.txt  synthesis_prompt_prompt.txt  system_prompt.txt
src/VTAAS/schemas/: llm.py  verdict.py  worker.py
src/VTAAS/utils/: __init__.py  banner.py  config.py  logger.py
src/VTAAS/workers/: actor.py  actor_prompt.txt  actor_prompt_prompt.txt  assertor.py  assertor_prompt.txt  assertor_prompt_prompt.txt  browser.py
tests/: test_actor.py  test_assertor.py  test_browser.py  test_full.py  test_orchestrator.py  test_tc_reader.py
